--- a/Core_Proje/Core_Proje.csproj
+++ b/Core_Proje/Core_Proje.csproj
@@ -2017,6 +2017,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Writer\Data\" />
+    <Folder Include="wwwroot\projectimage\" />
     <Folder Include="wwwroot\userimage\" />
     <Folder Include="wwwroot\skydash\.git\objects\info\" />
     <Folder Include="wwwroot\skydash\.git\objects\pack\" />
